# crex

./: .gitignore  CMakeLists.txt  README.md
_codeql_build_dir/: crex
_codeql_build_dir/tests/: crex_test  crex_test[1]_include.cmake  crex_test[1]_tests.cmake
include/: exchange.h
src/: exchange.cpp  main.cpp
tests/: CMakeLists.txt  exchange_test.cpp
